--- a/src/main/resources/locales/hu.yml
+++ b/src/main/resources/locales/hu.yml
@@ -2,8 +2,10 @@
 protection:
   flags:
     GREENHOUSE:
-      name: Greenhouses
-      description: "&bÁllítsd be, hogy ki\n&bkezelheti az üvegházat   \n"
+      name: Üvegházak
+      description: |-
+        &bÁllítsd be, hogy ki
+        &bkezelheti az üvegházat
 greenhouses:
   general:
     greenhouses: Üvegházak
@@ -30,124 +32,139 @@ greenhouses:
     missing: Hiányzó üvegház.
   commands:
     user:
+      description: "Megnyitja az üvegház választó menüt"
       remove:
         description: Ha az üvegházadban állsz és te vagy a tulaja, akkor törli azt.
       make:
         description: Megpróbál készíteni egy üvegházat.
         parameters: "<recipe>"
         error:
-          already: Az üvegház már létezik!
+          already: "&cAz üvegház már létezik!"
           FAIL_BAD_ROOF_BLOCKS: "&cA tető nem engedélyezett blokkokat tartalmaz!"
           FAIL_BAD_WALL_BLOCKS: "&cA fal nem engedélyezett blokkokat tartalmaz!"
           FAIL_BELOW: "&cAz üvegházban kell lenned, hogy megpróbáld elkészíteni"
-          FAIL_BLOCKS_ABOVE: "&cAz üvegház felett nem lehetnek blokkok! A piros üvegblokkoknak
-            meg kell mutatniuk a problémás blokkokat."
-          FAIL_HOLE_IN_ROOF: "&cVan egy lyuk a tetőn, vagy nem sík! A piros üvegblokkoknak
-            meg kell mutatniuk a problémát."
+          FAIL_BLOCKS_ABOVE: "&cAz üvegház felett nem lehetnek blokkok! A piros üvegblokkoknak meg kell mutatniuk a problémás blokkokat."
+          FAIL_HOLE_IN_ROOF: |-
+            &cVan egy lyuk a tetőn, vagy nem sík!
+            &cA piros üvegblokkoknak meg kell mutatniuk a problémát.
+            &cGyőződj meg róla, hogy az üvegház belsejében vagy.
           FAIL_HOLE_IN_WALL: "&cVan egy lyuk a falban!"
-          FAIL_NO_ROOF: "&cÚgy tűnik, nincs tető!"
+          FAIL_NO_ROOF: "&cÚgy tűnik, nincs tető! Győződj meg róla, hogy az üvegház belsejében vagy."
           FAIL_TOO_MANY_DOORS: "&cAz üvegházban nem lehet négynél több ajtó!"
-          FAIL_TOO_MANY_HOPPERS: "&cCsak egy tölcsér megengedett a falakban vagy a
-            tetőben."
-          FAIL_UNEVEN_WALLS: "&cA falak egyenetlenek. A piros üvegblokkoknak meg kell
-            mutatniuk a problémás blokkokat."
+          FAIL_TOO_MANY_HOPPERS: "&cCsak egy tölcsér megengedett a falakban vagy a tetőben."
+          FAIL_UNEVEN_WALLS: "&cA falak egyenetlenek. A piros üvegblokkoknak meg kell mutatniuk a problémás blokkokat."
           FAIL_INSUFFICIENT_ICE: "&cNem elegendő a jég ehhez a recept elkészítéséhez."
           FAIL_INSUFFICIENT_LAVA: "&cNem elegendő a láva ehhez a recept elkészítéséhez."
           FAIL_INSUFFICIENT_WATER: "&cNem elegendő a víz ehhez a recept elkészítéséhez."
           FAIL_NO_ICE: "&cA jég szükséges ehhez a recepthez."
           FAIL_NO_LAVA: "&cA láva szükséges ehhez a recepthez."
           FAIL_NO_WATER: "&cA víz szükséges ehhez a recepthez."
-          FAIL_NO_RECIPE_FOUND: "&c Nem található ilyen recept ebben a melegházban."
+          FAIL_NO_RECIPE_FOUND: "&cNem található ilyen recept ebben az üvegházban."
           FAIL_INSUFFICIENT_BLOCKS: "&cTovábbi blokkokra van szükség a recept elkészítéséhez!"
           FAIL_OVERLAPPING: "&cAz üvegházak nem oszthatják meg a falakat, bocs."
-        success: Sikeresen elkészítettél egy [biome] üvegházat! Az éghajlat szinkronizálódik
-          a következő teleportálásnál, vagy belépésnél.
+        success: "&2Sikeresen elkészítettél egy [biome] üvegházat! Az éghajlat szinkronizálódik a következő teleportálásnál vagy belépésnél."
         missing-blocks: "&cHiányzik [material] x [number]"
         unknown-recipe: "&cIsmeretlen recept"
         try-these: "&cPróbálj meg egyet az alábbiak közül:"
         recipe-format: "&3[name]"
       info:
-        title: "&A[Hogyan Készíts Üvegházat]"
-        instructions: "&EKészíts egy üvegdobozt 4 fallal, egy üvegtetővel,\n&Eés akár
-          4 ajtót is tehetsz a falba.\n&ERakj a falba vagy a tetőbe &F1 tölcsért,
-          &Eés helyezz bele vizes vödröket,\n&Ehogy havat és/vagy csontlisztet készíts,
-          mellyel automatikusan tudod növeszteni a növényeidet.\n&ENézd meg az éghajlatokhoz
-          tartozó recepteket, hogy megtudd milyen blokkok legyenek feltétlenül\n&Eaz
-          üvegházban ahhoz, hogy sikeresen elkészítsd. \n"
+        title: "&a[Hogyan Készíts Üvegházat]"
+        instructions: |-
+          &e Készíts egy üvegdobozt 4 fallal, egy üvegtetővel,
+          &e és akár &f 4 ajtót &e is tehetsz a falba.
+          &e Rakj a falba vagy a tetőbe &f 1 tölcsért&e, és helyezz bele vizes vödröket,
+          &e hogy havat és/vagy csontlisztet készíts, mellyel automatikusan tudod növeszteni a növényeidet.
+          &e Nézd meg az éghajlatokhoz tartozó recepteket, hogy megtudd milyen blokkok legyenek feltétlenül
+          &e az üvegházban ahhoz, hogy sikeresen elkészítsd.
+
 help:
-  help: help
-  make: Tries to make a greenhouse
-  remove: Removes a greenhouse that you are standing in if you are the owner
-  info: How to make a greenhouse
-  list: Lists all the greenhouse biomes that can be made
-  recipe: Tells you how to make greenhouse biome
-  opengui: Opens the Greenhouse GUI
+  help: "súgó"
+  make: "Megpróbál készíteni egy üvegházat"
+  remove: "Eltávolítja az üvegházat, amelyben állsz, ha te vagy a tulajdonos"
+  info: "Hogyan készíts üvegházat"
+  list: "Kilistázza az összes készíthető üvegház éghajlatot"
+  recipe: "Megmutatja, hogyan készítsd el az adott üvegház éghajlatot"
+  opengui: "Megnyitja az üvegház menüt"
+
 list:
-  title: "[Greenhouse Biome Recipes]"
-  info: Use /greenhouse recipe <number> to see details on how to make each greenhouse
+  title: "[Üvegház Éghajlat Receptek]"
+  info: "Használd a /greenhouse recipe <szám> parancsot a részletekért"
+
 error:
-  greenhouseProtected: Greenhouse protected
-  move: Move to a greenhouse you own first.
-  notowner: You must be the owner of this greenhouse to do that.
-  removing: Removing greenhouse!
-  notyours: This is not your greenhouse!
-  notinside: You are not in a greenhouse!
-  tooexpensive: You cannot afford [price]
-  alreadyexists: Greenhouse already exists!
-  norecipe: Cannot make a greenhouse!
+  greenhouseProtected: "Az üvegház védett"
+  move: "Menj a saját üvegházadhoz."
+  notowner: "Ehhez az üvegház tulajdonosának kell lenned."
+  removing: "Üvegház eltávolítása!"
+  notyours: "Ez nem a te üvegházad!"
+  notinside: "Nem vagy üvegházban!"
+  tooexpensive: "Ehhez nincs elég pénzed: [price]"
+  alreadyexists: "Az üvegház már létezik!"
+  norecipe: "Nem tudsz üvegházat csinálni!"
+
 messages:
-  enter: Entering [owner]'s [biome] greenhouse!
-  leave: Now leaving [owner]'s greenhouse.
-  youarein: You are now in [owner]'s [biome] greenhouse!
-  removed: This greenhouse is no more...
-  removedmessage: A [biome] greenhouse of yours is no more!
-  ecolost: Your greenhouse at [location] lost its eco system and was removed.
+  enter: "Beléptél [owner] [biome] üvegházába!"
+  leave: "Elhagytad [owner] üvegházát."
+  youarein: "Most [owner] [biome] üvegházában vagy!"
+  removed: "Ez az üvegház már nem létezik..."
+  removedmessage: "A [biome] üvegházad megszűnt!"
+  ecolost: "Az üvegházad itt: [location] elvesztette az ökoszisztémáját, ezért el lett távolítva."
+
 info:
-  title: "&A[How To Build A Greenhouse]"
-  instructions: "&EMake a box out of out of glass with 4 walls and a flat glass\n&Eroof
-    and add up to &F4 doors &Ein the walls.\n&EPlace &F1 hopper &Ein a wall or roof
-    and add water buckets.\n&Eto make snow and/or bonemeal to grow plants automatically.\n&ECheck
-    the biome recipes for what blocks must be inside a\n&Egreenhouse to make one successfully.
-    \n"
-  info: "[Greenhouse Info]"
-  none: None
-  nomore: "&4You cannot build any more greenhouses!"
-  onemore: "&6You can build one more greenhouse."
-  youcanbuild: "&AYou can build up to [number] more greenhouses!"
-  unlimited: "&AYou can build an unlimited number of greenhouses!"
-  welcome: "&BWelcome! Click here for instructions"
+  title: "&a[Hogyan Készíts Üvegházat]"
+  instructions: |-
+    &e Készíts egy üvegdobozt 4 fallal, egy üvegtetővel,
+    &e és akár &f 4 ajtót &e is tehetsz a falba.
+    &e Rakj a falba vagy a tetőbe &f 1 tölcsért&e, és helyezz bele vizes vödröket,
+    &e hogy havat és/vagy csontlisztet készíts, mellyel automatikusan tudod növeszteni a növényeidet.
+    &e Nézd meg az éghajlatokhoz tartozó recepteket, hogy megtudd milyen blokkok legyenek feltétlenül
+    &e az üvegházban ahhoz, hogy sikeresen elkészítsd.
+  info: "[Üvegház Infó]"
+  none: "Nincs"
+  nomore: "&4Nem építhetsz több üvegházat!"
+  onemore: "&6Még egy üvegházat építhetsz."
+  youcanbuild: "&aMég [number] üvegházat építhetsz!"
+  unlimited: "&aVégtelen számú üvegházat építhetsz!"
+  welcome: "&bÜdvözlünk! Kattints ide az utasításokért"
+
 recipe:
   blockscolor: "&f"
-  hint: Use /greenhouse list to see a list of recipe numbers!
-  wrongnumber: Recipe number must be between 1 and [size]
-  title: "[[biome] recipe]"
-  nowater: No water allowed.
-  noice: No ice allowed.
-  nolava: No lava allowed.
-  watermustbe: Water > [coverage]% of floor area.
-  icemustbe: Ice blocks > [coverage]% of floor area.
-  lavamustbe: Lava > [coverage]% of floor area.
-  minimumblockstitle: "[Minimum blocks required]"
-  nootherblocks: No other blocks required.
-  missing: Greenhouse is missing
+  hint: "Használd a /greenhouse list parancsot a receptszámok megtekintéséhez!"
+  wrongnumber: "A recept száma 1 és [size] között kell legyen"
+  title: "[[biome] recept]"
+  nowater: "Víz nem engedélyezett."
+  noice: "Jég nem engedélyezett."
+  nolava: "Láva nem engedélyezett."
+  watermustbe: "Víz > [coverage]% kell, hogy legyen az alapterületen."
+  icemustbe: "Jég blokk > [coverage]% kell, hogy legyen az alapterületen."
+  lavamustbe: "Láva > [coverage]% kell, hogy legyen az alapterületen."
+  minimumblockstitle: "[Minimum blokkmennyiség]"
+  nootherblocks: "Nem szükséges több blokk."
+  missing: "Hiányzó üvegház."
+
 event:
-  broke: You broke this greenhouse! Reverting biome to [biome]!
-  fix: Fix the greenhouse and then make it again.
-  cannotplace: Blocks cannot be placed above a greenhouse!
-  pistonerror: Pistons cannot push blocks over a greenhouse!
+  broke: "Összetörted az üvegházad! Visszaállítjuk a biome-ot [biome]-ra/re!"
+  fix: "Javítsd meg az üvegházat, majd készítsd el újra."
+  cannotplace: "Blokkokat nem lehet az üvegház fölé helyezni!"
+  pistonerror: "A dugattyúk nem tolhatnak blokkokat az üvegház fölé!"
+
 limits:
-  noneallowed: Permissions do not allow you any greenhouses so [number] were removed.
-  limitedto: Permissions limit you to [limit] greenhouses so [number] were removed.
+  noneallowed: "A jogosultságaid nem engedélyeznek üvegházat, ezért [number] el lett távolítva."
+  limitedto: "A jogosultságaid csak [limit] üvegházat engedélyeznek, ezért [number] el lett távolítva."
+
 adminHelp:
-  reload: reload configuration from file.
-  info: provides info on the greenhouse you are in
+  reload: "konfiguráció újratöltése fájlból."
+  info: "információt ad az üvegházról, amelyben tartózkodsz"
+
 reload:
-  configReloaded: Configuration reloaded from file.
+  configReloaded: "Konfiguráció újratöltve a fájlból."
+
 admininfo:
-  error: Greenhouse info only available in-game
-  error2: Put yourself in a greenhouse to see info.
-  flags: "[Greenhouse Flags]"
+  error: "Az üvegház információk csak játékban érhetőek el"
+  error2: "Menj be egy üvegházba az információk megtekintéséhez."
+  flags: "[Üvegház Jelzők]"
+
 news:
-  headline: "[Greenhouse News]"
+  headline: "[Üvegház Hírek]"
+
 controlpanel:
-  title: "&AGreenhouses"
+  title: "&aÜvegházak"
