--- a/src/main/resources/locales/ja.yml
+++ b/src/main/resources/locales/ja.yml
@@ -11,7 +11,7 @@ greenhouses:
     greenhouses: 温室
   errors:
     move: 最初に所有する温室に移動します。
-    no-rank: "＆cあなたにはそれをするランクがありません。"
+    no-rank: "&cあなたにはそれをするランクがありません。"
     notyours: これはあなたの温室ではありません！
     not-inside: "&cあなたは温室の中にいません！"
     tooexpensive: あなたは余裕がない[price]
@@ -22,7 +22,7 @@ greenhouses:
     entering: "[biome]の温室に入る"
     leaving: "[biome]の温室を離れる"
   recipe:
-    blockscolor: "＆f"
+    blockscolor: "&f"
     title: "[[biome]レシピ]"
     watermustbe: 水>[coverage]床面積の％。
     icemustbe: 氷のブロック>床面積の[coverage]％。
@@ -32,112 +32,139 @@ greenhouses:
     missing: 温室がありません
   commands:
     user:
+      description: "温室選択GUIを開きます"
       remove:
         description: あなたが所有者である場合、あなたが立っている温室を取り除きます
       make:
         description: 温室を作ってみる
         parameters: "<レシピ>"
         error:
-          already: "＆cここには温室がすでにあります！"
-          FAIL_BAD_ROOF_BLOCKS: "＆c屋根には許可されていないブロックが含まれています！"
-          FAIL_BAD_WALL_BLOCKS: "＆c壁には許可されていないブロックが含まれています！"
-          FAIL_BELOW: "＆c温室を作るには、温室内にいる必要があります"
-          FAIL_BLOCKS_ABOVE: "＆c温室の上にブロックを置くことはできません！赤いガラスブロックに問題のあるブロックが表示されます。"
-          FAIL_HOLE_IN_ROOF: "＆c屋根に穴があるか、平らではありません！赤いガラスブロックが問題を示しているはずです。"
-          FAIL_HOLE_IN_WALL: "＆c壁に穴が開いています！"
-          FAIL_NO_ROOF: "＆c屋根がないようです！"
-          FAIL_TOO_MANY_DOORS: "＆c温室には4つ以上のドアを置くことはできません！"
-          FAIL_TOO_MANY_HOPPERS: "＆c壁または屋根に使用できるホッパーは1つだけです。"
-          FAIL_UNEVEN_WALLS: "＆c壁が不均一です。赤いガラスブロックに問題のあるブロックが表示されます。"
-          FAIL_INSUFFICIENT_ICE: "＆cこのレシピを作成するには氷が足りません"
-          FAIL_INSUFFICIENT_LAVA: "＆cこのレシピを作るには溶岩が足りません"
-          FAIL_INSUFFICIENT_WATER: "＆cこのレシピを作るのに水が足りません"
-          FAIL_NO_ICE: このレシピを作成するには＆c氷が必要です
-          FAIL_NO_LAVA: このレシピを作成するには＆c溶岩が必要です
-          FAIL_NO_WATER: このレシピを作成するには＆c水が必要です
-          FAIL_NO_RECIPE_FOUND: "＆cこの温室に一致するレシピが見つかりませんでした"
+          already: "&cここには温室がすでにあります！"
+          FAIL_BAD_ROOF_BLOCKS: "&c屋根には許可されていないブロックが含まれています！"
+          FAIL_BAD_WALL_BLOCKS: "&c壁には許可されていないブロックが含まれています！"
+          FAIL_BELOW: "&c温室を作るには、温室内にいる必要があります"
+          FAIL_BLOCKS_ABOVE: "&c温室の上にブロックを置くことはできません！赤いガラスブロックに問題のあるブロックが表示されます。"
+          FAIL_HOLE_IN_ROOF: |-
+            &c屋根に穴があるか、平らではありません！
+            &c赤いガラスブロックが問題を示しているはずです。
+            &c作成するには、温室の中にいることを確認してください。
+          FAIL_HOLE_IN_WALL: "&c壁に穴が開いています！"
+          FAIL_NO_ROOF: "&c屋根がないようです！作成するには温室の中にいることを確認してください。"
+          FAIL_TOO_MANY_DOORS: "&c温室には4つ以上のドアを置くことはできません！"
+          FAIL_TOO_MANY_HOPPERS: "&c壁または屋根に使用できるホッパーは1つだけです。"
+          FAIL_UNEVEN_WALLS: "&c壁が不均一です。赤いガラスブロックに問題のあるブロックが表示されます。"
+          FAIL_INSUFFICIENT_ICE: "&cこのレシピを作成するには氷が足りません"
+          FAIL_INSUFFICIENT_LAVA: "&cこのレシピを作るには溶岩が足りません"
+          FAIL_INSUFFICIENT_WATER: "&cこのレシピを作るのに水が足りません"
+          FAIL_NO_ICE: "&cこのレシピを作成するには氷が必要です"
+          FAIL_NO_LAVA: "&cこのレシピを作成するには溶岩が必要です"
+          FAIL_NO_WATER: "&cこのレシピを作成するには水が必要です"
+          FAIL_NO_RECIPE_FOUND: "&cこの温室に一致するレシピが見つかりませんでした"
           FAIL_INSUFFICIENT_BLOCKS: "&cこのレシピを作成するには、さらに多くのブロックが必要です。"
-          FAIL_OVERLAPPING: "＆c温室は壁を共有できません。申し訳ありません。"
-        success: "＆2あなたは[biome]バイオーム温室を無事に作成しました！バイオームは次のテレポートまたはログインで同期します。"
+          FAIL_OVERLAPPING: "&c温室は壁を共有できません。申し訳ありません。"
+        success: "&2あなたは[biome]バイオーム温室を無事に作成しました！バイオームは次のテレポートまたはログインで同期します。"
         missing-blocks: "&c欠落[material] x [number]"
-        unknown-recipe: "＆c不明なレシピ"
-        try-these: "＆c次のいずれかを試してください。"
+        unknown-recipe: "&c不明なレシピ"
+        try-these: "&c次のいずれかを試してください。"
         recipe-format: "&3[name]"
       info:
-        title: "＆A [温室の作り方]"
-        instructions: 4つの壁と平らなガラス屋根でガラスから箱を作り、壁に最大4つのドアを追加します。 1つのホッパーを壁または屋根に置き、水バケツを追加します。
-          雪や骨粉を作り、植物を自動的に育てます。 バイオームレシピを確認して、温室内で正常にブロックするために必要なブロックを確認してください。
+        title: "&a [温室の作り方]"
+        instructions: |-
+          &e 4つの壁と平らなガラス屋根でガラスから箱を作り、
+          &e 壁に最大 &f 4つのドア &e を追加します。
+          &e 1つのホッパーを壁または屋根に置き、水バケツを追加します。
+          &e 雪や骨粉を作り、植物を自動的に育てます。
+          &e バイオームレシピを確認して、温室内で正常にブロックするために
+          &e 必要なブロックを確認してください。
+
 help:
-  help: 手助け
-  make: 温室を作ろうとする
-  remove: あなたが所有者である場合、あなたが立っている温室を取り除きます
-  info: 温室の作り方
-  list: 作成可能なすべての温室バイオームをリストします
-  recipe: 温室バイオームの作り方を説明します
-  opengui: 温室のGUI
+  help: "help"
+  make: "温室を作ろうとする"
+  remove: "あなたが所有者である場合、あなたが立っている温室を取り除きます"
+  info: "温室の作り方"
+  list: "作成可能なすべての温室バイオームをリストします"
+  recipe: "温室バイオームの作り方を説明します"
+  opengui: "温室のGUIを開く"
+
 list:
-  title: "[温室効果バイオームのレシピ]"
-  info: "/greenhouse recipe <番号>を使用する各温室の作り方の詳細を見る"
+  title: "[温室バイオームのレシピ]"
+  info: "/greenhouse recipe <番号> を使用して、各温室の作り方の詳細を確認します"
+
 error:
-  greenhouseProtected: 温室保護
-  move: 最初に所有する温室に移動します。
-  notowner: それを行うには、この温室の所有者でなければなりません。
-  removing: 温室を撤去！
-  notyours: これはあなたの温室ではありません！
-  notinside: あなたは温室の中にいません！
-  tooexpensive: あなたは余裕がない[price]
-  alreadyexists: 温室はすでに存在します！
-  norecipe: 温室を作ることができません！
+  greenhouseProtected: "温室は保護されています"
+  move: "最初に所有する温室に移動します。"
+  notowner: "それを行うには、この温室の所有者でなければなりません。"
+  removing: "温室を撤去中！"
+  notyours: "これはあなたの温室ではありません！"
+  notinside: "あなたは温室の中にいません！"
+  tooexpensive: "費用を支払うことができません [price]"
+  alreadyexists: "温室はすでに存在します！"
+  norecipe: "温室を作ることができません！"
+
 messages:
   enter: "[owner]の[biome]の温室に入る！"
   leave: "[owner]の温室を離れます。"
-  youarein: あなたは今[owner]の[biome]の温室にいます！
-  removed: この温室はもうありません...
-  removedmessage: あなたの[biome]の温室はもうありません！
+  youarein: "あなたは今[owner]の[biome]の温室にいます！"
+  removed: "この温室はもうありません..."
+  removedmessage: "あなたの[biome]の温室はもうありません！"
   ecolost: "[location]の温室はエコシステムを失い、撤去されました。"
+
 info:
-  title: "＆A [温室の作り方]"
-  instructions: "＆E 4つの壁と平らなガラスの＆E屋根でガラスから箱を作り、壁に＆F 4のドア＆Eを追加します。 ＆E壁と屋根に＆F 1ホッパー＆Eを配置し、ウォーターバケツ＆Eを追加して雪や骨粉を作り、植物を自動的に成長させます。
-    ＆Eバイオームレシピを確認して、＆E温室内で正常にブロックを作成するために必要なブロックを確認します。"
+  title: "&a [温室の作り方]"
+  instructions: |-
+    &e 4つの壁と平らなガラスの屋根でガラスから箱を作り、
+    &e 壁に最大 &f 4つのドア &e を追加します。
+    &e 壁と屋根に &f 1ホッパー &e を配置し、ウォーターバケツを追加して
+    &e 雪や骨粉を作り、植物を自動的に成長させます。
+    &e バイオームレシピを確認して、温室内で正常に作成するために
+    &e 必要なブロックを確認します。
   info: "[温室情報]"
-  none: 無し
-  nomore: "＆4これ以上温室を建設することはできません！"
-  onemore: "＆6温室をもう1つ構築できます。"
-  youcanbuild: "＆A温室を最大[number]個まで構築できます！"
-  unlimited: "＆A温室を無制限に構築できます！"
-  welcome: "＆B ようこそ！手順についてはここをクリックしてください"
+  none: "なし"
+  nomore: "&4これ以上温室を建設することはできません！"
+  onemore: "&6温室をもう1つ構築できます。"
+  youcanbuild: "&a温室を最大 [number] 個まで構築できます！"
+  unlimited: "&a温室を無制限に構築できます！"
+  welcome: "&b ようこそ！手順についてはここをクリックしてください"
+
 recipe:
-  blockscolor: "＆f"
-  hint: "/ greenhouse listを使用して、レシピ番号のリストを表示します！"
-  wrongnumber: レシピ番号は1から[size]の間でなければなりません
+  blockscolor: "&f"
+  hint: "/greenhouse list を使用してレシピ番号のリストを表示します！"
+  wrongnumber: "レシピ番号は1から[size]の間でなければなりません"
   title: "[[biome]レシピ]"
-  nowater: 水は許可されません。
-  noice: 氷は許可されていません。
-  nolava: 溶岩は許可されていません。
-  watermustbe: 水> [coverage]床面積の％。
-  icemustbe: 氷のブロック&gt;床面積の[coverage]％。
-  lavamustbe: 溶岩> [coverage]床面積の％。
+  nowater: "水は許可されません。"
+  noice: "氷は許可されていません。"
+  nolava: "溶岩は許可されていません。"
+  watermustbe: "水 > [coverage]% (床面積比)"
+  icemustbe: "氷ブロック > [coverage]% (床面積比)"
+  lavamustbe: "溶岩 > [coverage]% (床面積比)"
   minimumblockstitle: "[必要な最小ブロック]"
-  nootherblocks: 他のブロックは必要ありません。
-  missing: 温室がありません
+  nootherblocks: "他のブロックは必要ありません。"
+  missing: "温室がありません"
+
 event:
-  broke: あなたはこの温室を壊しました！バイオームを[biome]に戻しています！
-  fix: 温室を修理してから、もう一度作ります。
-  cannotplace: ブロックを温室の上に置くことはできません！
-  pistonerror: ピストンは温室の上でブロックを押すことができません！
+  broke: "温室を壊しました！バイオームを [biome] に戻しています！"
+  fix: "温室を修理してから、もう一度作ります。"
+  cannotplace: "ブロックを温室の上に置くことはできません！"
+  pistonerror: "ピストンは温室の上でブロックを押すことができません！"
+
 limits:
-  noneallowed: 許可により温室が許可されないため、[number]は削除されました。
-  limitedto: 許可により温室が[limit]に制限されるため、[number]が削除されました。
+  noneallowed: "権限がないため、[number] 個の温室が削除されました。"
+  limitedto: "権限により温室が [limit] 個に制限されているため、[number] 個が削除されました。"
+
 adminHelp:
-  reload: ファイルから設定をリロードします。
-  info: あなたがいる温室に関する情報を提供します
+  reload: "設定ファイルをリロードします。"
+  info: "現在いる温室の情報を提供します"
+
 reload:
-  configReloaded: ファイルから構成が再ロードされました。
+  configReloaded: "設定ファイルが再読み込みされました。"
+
 admininfo:
-  error: ゲーム内でのみ利用可能な温室情報
-  error2: 温室で情報を確認してください。
-  flags: "[温室旗]"
+  error: "温室情報はゲーム内でのみ利用可能です"
+  error2: "温室の中で情報を確認してください。"
+  flags: "[温室フラグ]"
+
 news:
   headline: "[温室ニュース]"
+
 controlpanel:
-  title: "＆A温室"
+  title: "&a温室"
